--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-telegram.bot.token=
+spring.datasource.url= jdbc:postgresql://localhost:5432/telegram
+spring.datasource.username=userTelegram
+spring.datasource.password=12345
+telegram.bot.token=5806411616:AAFx04SSPsjdKPT_ZSfDnqKn5UtcuLIyUuE
+spring.liquibase.change-log=classpath:liquibase/telegram-master.yml
+spring.jpa.hibernate.ddl-auto=update
