--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/telegram
+spring.datasource.url= jdbc:postgresql://localhost:5432/telegeram
 spring.datasource.username=userTelegram
 spring.datasource.password=12345
 telegram.bot.token=5806411616:AAFx04SSPsjdKPT_ZSfDnqKn5UtcuLIyUuE
